Styling of the pop-up has been fixed, deleted the grid and instead used flexbox cause of inconveniences with grid. Also made some hotfixes, received some feedback from a senior developer, because of that the readability of the code has been improved.

--- a/styles/pop-ups.css
+++ b/styles/pop-ups.css
@@ -1,67 +1,79 @@
 .pop-up-container {
     display: none;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 2;
     position: fixed;
     pointer-events: initial;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity .2s ease;
+}
+
+.animate-pop-up {
+    opacity: 1;
 }
 
 .pop-up {
-    display: none; /* important, needed to make sure it only shows when an entry is clicked */
+     /* important, needed to make sure it only shows when an entry is clicked */
     background-color: var(--brokenWhite);
-    left: 50%;
-    top: 25%;
-    margin-left: -25%;
-    height: 50%;
-    width: 50%;
-    grid-column: 2;
-    border: solid var(--blue) 3px;
+    border: 2px solid var(--blue);
     z-index: 3;
-    position: fixed;
-    border-radius: 5px;
+    border-radius: 10px;
+    width: 50%;
+    height: 60%;
 }
 
 .pop-up__header {
     width: 100%;
-    height: 25%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 1fr 2fr 1fr;
-    border-bottom: solid var(--grey) 1px;
-    padding-bottom: 2.5%;
+    display: flex;
+    border-bottom: 1px solid var(--grey);
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 .pop-up__header h1 {
-    text-align: center;
-    grid-column: 2;
-    width: 100%;
-    margin: 2.5% 0;
     color: var(--blue);
 }
 .pop-up__header button {
-    width: 20%;
-    height: 60%;
-    float: right;
-    grid-column: 3;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background-color: var(--lightBlue);
+    color: white;
+    font-size: 1.3em;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid var(--primary-blue);
 }
 
 .pop-up__header .button-wrapper {
-    width: 100%;
-    height: 100%;
+    padding: 0;
+    position: absolute;
+    right: 40px;
+    width: 25px;
+    height: 25px;
 }
 
 .pop-up input {
     border: none;
 }
 
+.reservation-pop-up {
+    display: flex;
+    flex-direction: column;
+}
+
 .reservation-pop-up form {
-    margin: 5% 15%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    /*! display: flex; */
+    height: 100%;
+    width: 100%;
+    position: relative;
 }
 
 .reservation-pop-up label {
@@ -71,52 +83,50 @@
 .reservation-pop-up label input {
     text-align: center;
     border-radius: 5px;
-    border: solid var(--blue) 2px;
-    color: var(--brokenWhite);
-    background-color: var(--lightBlue);
+    border: 2px solid #707070;
+    color: #fff;
+    background-color: var(--blue);
 }
 
 .reservation-pop-up label input[disabled] {
-    background-color: var(--darkBlue);
+    background-color: #DDDDDD;
+    border-color: #707070;
+    color: #A5A5A5;
 }
 
 .reservation-pop-up #number {
-    grid-row: 1;
-    grid-column: 1;
-    width: 30%;
+    width: 20%;
+    padding: .5em;
 }
 
 .reservation-pop-up #name {
-    grid-row: 1;
-    grid-column: 2;
+    text-align: left;
+    padding: .5em;
 }
 
 .reservation-pop-up #costTotal {
-    grid-row: 1;
-    grid-column: 3;
-    width: 30%;
+    width: 20%;
+    padding: .5em;
 }
 
 .reservation-pop-up #costPaid {
-    grid-row: 2;
-    grid-column: 2;
-    width: 30%;
+    width: 20%;
+    padding: .5em;
 }
 
 .reservation-pop-up #amountUnpaid {
-    grid-row: 2;
-    grid-column: 3;
-    width: 30%;
+    width: 20%;
+    padding: .5em;
 }
 
 .reservation-pop-up .buttons__add {
-    margin-top: 20%;
-    grid-row: 3;
-    grid-column: 2;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10vw;
 }
 
-.reservation-pop-up label {
-    float: left;
-    width: 100%;
-    margin-left: 0;
+.form__groups {
+    display: flex;
 }
